apps/external-apps/paperless-gpt/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-gpt
  namespace: external-apps
spec:
  type: ExternalName
  ports:
    - name: http
      port: 3002
      targetPort: 3002
  externalName: 10.69.1.52
